# stack-templates

./: .gitignore  .gitlab-ci.yml  README.md  clash-starter.hsfiles  deca.hsfiles  orangecrab.hsfiles  render.hs  simple-nix.hsfiles  simple.hsfiles
.ci/: install_ssh_keys.sh  publish.sh  publish_nix.sh  render_and_check.sh  test_projects.sh  test_projects_cabal.sh  test_projects_hls.sh  test_projects_nix.sh  test_projects_stack.sh
.github/workflows/: ci.yml
clash-starters-files/: flake.nix
docker/: Dockerfile  build-and-publish-docker-image.sh
docker/nixos-xz-git/: Dockerfile  build-and-publish-docker-image.sh
docker/publish/: Dockerfile  build-and-publish-docker-image.sh
projects-nix/simple-nix/: .vscode  README.md  bin  cabal.project  flake.nix  simple-nix.cabal  src  tests
projects-nix/simple-nix/nix/: sources.json
projects-nix/simple-nix/tests/: Tests  unittests.hs
projects/deca/: .gitignore  README.md  Setup.hs  cabal.project  {{name}}.cabal
projects/deca/src/: DECA.hs
projects/deca/tests/: doctests.hs
projects/orangecrab/: .gitignore  Makefile  README.md  bin  build.cfg  cabal.project  flake.nix  makefile  orangecrab.cabal  {{name}}.cabal
projects/orangecrab-nix/: .gitignore  README.md  build.cfg  flake.nix  orangecrab.cabal
projects/orangecrab-nix/src/: Blink.hs
projects/orangecrab-nix/src/Orangecrab/: Domain.hs
projects/orangecrab-nix/test/Test/: Blink.hs
projects/orangecrab/clash/: LICENSE  Main.hs  clash-proxy.cabal
projects/orangecrab/src/: Blink.hs  RGB.hs
projects/orangecrab/src/Orangecrab/: Domain.hs
projects/orangecrab/test/Test/: Blink.hs  Main.hs
projects/orangecrab/tests/: doctests.hs
projects/orangecrab/tests/Tests/: Blink.hs
projects/simple/: README.md  TOUR.md  cabal.project  hie.yaml  stack.yaml  {{name}}.cabal
projects/simple-nix/: .vscode  README.md  default.nix  hie.yaml  stack.yaml  tests  {{name}}.cabal
projects/simple-nix/nix/: nixpkgs.nix  sources.json
projects/simple/src/Example/: Project.hs
projects/simple/tests/: doctests.hs
projects/simple/tests/Tests/Example/: Project.hs
